[gd_scene load_steps=8 format=3 uid="uid://cutscene1"]

[ext_resource type="Script" path="res://cutscene1.gd" id="1_cutscene"]
[ext_resource type="Texture2D" uid="uid://cavalier" path="res://cavalier_pixel_art.png" id="3_cavalier"]
[ext_resource type="PackedScene" uid="uid://player123" path="res://player.tscn" id="4_player"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_snow"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(900, 1, 1)
direction = Vector3(0, 1, 0)
spread = 15.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 50, 0)
scale_min = 2.0
scale_max = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_floor"]
size = Vector2(1800, 64)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_glow"]
blend_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tunnel"]
size = Vector2(150, 120)

[node name="Cutscene1" type="Node2D"]
script = ExtResource("1_cutscene")

[node name="Sky" type="ColorRect" parent="."]
z_index = -20
offset_right = 1600.0
offset_bottom = 1200.0
color = Color(0.15, 0.15, 0.25, 1)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(800, 1100)

[node name="ColorRect" type="ColorRect" parent="Ground"]
z_index = -5
offset_left = -900.0
offset_top = -32.0
offset_right = 900.0
offset_bottom = 132.0
color = Color(0.9, 0.9, 0.95, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_floor")

[node name="Buildings" type="Node2D" parent="."]
z_index = -8

[node name="Building1" type="ColorRect" parent="Buildings"]
offset_left = 50.0
offset_top = 500.0
offset_right = 200.0
offset_bottom = 1070.0
color = Color(0.3, 0.3, 0.35, 1)

[node name="Windows1" type="ColorRect" parent="Buildings/Building1"]
offset_left = 20.0
offset_top = 30.0
offset_right = 60.0
offset_bottom = 60.0
color = Color(0.8, 0.7, 0.2, 1)

[node name="Windows2" type="ColorRect" parent="Buildings/Building1"]
offset_left = 90.0
offset_top = 30.0
offset_right = 130.0
offset_bottom = 60.0
color = Color(0.8, 0.7, 0.2, 1)

[node name="Windows3" type="ColorRect" parent="Buildings/Building1"]
offset_left = 20.0
offset_top = 100.0
offset_right = 60.0
offset_bottom = 130.0
color = Color(0.2, 0.2, 0.3, 1)

[node name="Building2" type="ColorRect" parent="Buildings"]
offset_left = 220.0
offset_top = 400.0
offset_right = 400.0
offset_bottom = 1070.0
color = Color(0.35, 0.32, 0.38, 1)

[node name="Windows1" type="ColorRect" parent="Buildings/Building2"]
offset_left = 25.0
offset_top = 40.0
offset_right = 75.0
offset_bottom = 80.0
color = Color(0.8, 0.7, 0.2, 1)

[node name="Windows2" type="ColorRect" parent="Buildings/Building2"]
offset_left = 105.0
offset_top = 40.0
offset_right = 155.0
offset_bottom = 80.0
color = Color(0.2, 0.2, 0.3, 1)

[node name="Building3" type="ColorRect" parent="Buildings"]
offset_left = 1300.0
offset_top = 450.0
offset_right = 1500.0
offset_bottom = 1070.0
color = Color(0.28, 0.28, 0.32, 1)

[node name="Windows1" type="ColorRect" parent="Buildings/Building3"]
offset_left = 30.0
offset_top = 50.0
offset_right = 80.0
offset_bottom = 90.0
color = Color(0.8, 0.7, 0.2, 1)

[node name="Building4" type="ColorRect" parent="Buildings"]
offset_left = 1400.0
offset_top = 550.0
offset_right = 1580.0
offset_bottom = 1070.0
color = Color(0.33, 0.3, 0.36, 1)

[node name="Tree" type="Node2D" parent="."]
position = Vector2(900, 700)
z_index = 5

[node name="Trunk" type="ColorRect" parent="Tree"]
offset_left = -30.0
offset_top = 0.0
offset_right = 30.0
offset_bottom = 370.0
color = Color(0.4, 0.25, 0.15, 1)

[node name="Leaves1" type="ColorRect" parent="Tree"]
offset_left = -120.0
offset_top = -100.0
offset_right = 120.0
offset_bottom = 100.0
color = Color(0.15, 0.4, 0.15, 1)

[node name="Leaves2" type="ColorRect" parent="Tree"]
offset_left = -80.0
offset_top = -180.0
offset_right = 80.0
offset_bottom = -20.0
color = Color(0.2, 0.5, 0.2, 1)

[node name="Snow1" type="ColorRect" parent="Tree"]
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -80.0
color = Color(0.95, 0.95, 1, 1)

[node name="Snow2" type="ColorRect" parent="Tree"]
offset_left = -60.0
offset_top = -170.0
offset_right = 60.0
offset_bottom = -150.0
color = Color(0.95, 0.95, 1, 1)

[node name="Cavalier" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(920, 620)
scale = Vector2(0.12, 0.12)
texture = ExtResource("3_cavalier")

[node name="Player" parent="." instance=ExtResource("4_player")]
z_index = 10
position = Vector2(500, 1000)

[node name="Tunnel" type="Node2D" parent="."]
position = Vector2(1350, 1000)
z_index = 15

[node name="Glow" type="ColorRect" parent="Tunnel"]
material = SubResource("CanvasItemMaterial_glow")
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
color = Color(1, 0.5, 0.2, 0.5)

[node name="Opening" type="ColorRect" parent="Tunnel"]
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
color = Color(0.2, 0.1, 0.05, 1)

[node name="Rim" type="ColorRect" parent="Tunnel"]
offset_left = -110.0
offset_top = -70.0
offset_right = 110.0
offset_bottom = 70.0
z_index = -1
color = Color(0.6, 0.3, 0.1, 1)

[node name="SnowParticles" type="GPUParticles2D" parent="."]
z_index = 20
position = Vector2(800, -50)
amount = 200
process_material = SubResource("ParticleProcessMaterial_snow")
lifetime = 12.0
visibility_rect = Rect2(-1000, -100, 2000, 1400)

[node name="UI" type="CanvasLayer" parent="."]

[node name="DialogueLabel" type="Label" parent="UI"]
offset_left = 100.0
offset_top = 50.0
offset_right = 1500.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1

[node name="TunnelArea" type="Area2D" parent="."]
position = Vector2(1350, 1000)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TunnelArea"]
shape = SubResource("RectangleShape2D_tunnel")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(800, 600)
zoom = Vector2(0.83, 0.83)

[connection signal="body_entered" from="TunnelArea" to="." method="_on_tunnel_area_body_entered"]
